Can not map wacom tablet to a single monitor
Affected version
Fedora Silverblue Rawhide (Rawhide.20210316.n.1)
mutter 40rc - mutter-40.0~rc-1.fc35.x86_64
Wayland
Bug summary
Clicking button on Wacom tablet mapped to Switch monitor
or using options in Map to Monitor...
dialog window has no effect.
Steps to reproduce
- Connect wacom tablet
- Go to Settings -> Wacom -> Tablet
- Try to map the tablet to a single monitor (either via a mapped button or the dialog window)
What happened
Nothing when using the dialog window and when clicking mapped button the indicator, of what screens are currently mapped to the tablet surface, is shown on all screens.
What did you expect to happen
To map the tablet surface to a single monitor.